--- a/Test3ProjectDemo/Podfile
+++ b/Test3ProjectDemo/Podfile
@@ -1,7 +1,7 @@
 # Uncomment this line to define a global platform for your project
 # platform :ios, '9.0'
 
-source 'https://github.com/hu646641434/XES_test3'
+source 'https://github.com/hu646641434/XES_test3.git’
 source 'https://github.com/CocoaPods/Specs.git'
 
 target 'Test3ProjectDemo’ do
